# openai-python

./: .gitignore  Makefile  setup.cfg  setup.py
ocd/: __main__.py  about.py
ocd/code/python/: docstring.py
ocd/completions/: create.py
ocd/defaults/: __init__.py  list.py
ocd/edits/: create.py
ocd/fine_tune/: list.py
ocd/images/: create.py
ocd/models/: list.py  overview.py  retrieve.py
ocd/secrets.d/: openai.json
ocd/text/: analyze.py
ocd/usage/: __init__.py
ocd/utils/: __init__.py
